force-app/main/default/objects/PixelEvent__e/PixelEvent__e.object-meta.xml
<CustomObject>
    <label>Pixel Event</label>
    <pluralLabel>Pixel Events</pluralLabel>
</CustomObject>