force-app/main/default/objects/PixelEvent__e/fields/IconId__c.field-meta.xml
<CustomField>
    <fullName>IconId__c</fullName>
    <label>Icon Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>