force-app/main/default/objects/PixelEvent__e/fields/PixelId__c.field-meta.xml
<CustomField>
    <fullName>PixelId__c</fullName>
    <label>Pixel Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>