force-app/main/default/objects/PixelEvent__e/fields/UniqueId__c.field-meta.xml
<CustomField>
    <fullName>UniqueId__c</fullName>
    <label>Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>